# security

./: .gitignore  Cargo.toml  README.md
crates/app-support/: Cargo.toml
crates/app-support/src/: data_key_provider.rs  data_key_service.rs  lib.rs  provider_backed_encryption_service.rs
crates/app-support/src/repository/: encrypted_log_repository.rs  key_envelope_repository.rs  key_repository.rs  mod.rs
crates/crypto-adapters/: Cargo.toml
crates/crypto-adapters/src/: aes_gcm_crypto.rs  factory.rs  lib.rs  mlkem_service.rs  os_secure_random.rs
crates/crypto-core/: Cargo.toml
crates/crypto-core/src/: core_facade.rs  lib.rs
crates/crypto-core/src/crypto/: backends.rs  key_wrap.rs  mod.rs
crates/crypto-core/src/domain/: crypto_package.rs  data_key.rs  encrypted_log.rs  key_envelope.rs  mod.rs
crates/crypto-core/src/service/: decryption_service.rs  encryption_service.rs  key_management_service.rs  mod.rs  sharing_service.rs
crates/crypto-core/tests/: core_integration.rs
crates/crypto-ffi/: Cargo.toml
crates/crypto-ffi/include/: crypto_ffi.h
crates/crypto-ffi/src/: buffers.rs  error.rs  handle.rs  lib.rs  types.rs
crates/crypto-ffi/src/api/: crypto.rs  facade.rs  mod.rs
crates/crypto-ffi/tests/: ffi_smoke.rs
docs/: data-encryption-mapping.md
java/: README.md  build.gradle  settings.gradle
java/src/main/java/example/cryptoffi/: CryptoFfiNative.java  CryptoFfiSmokeTest.java
java/src/test/java/example/cryptoffi/: CryptoFfiIntegrationTest.java  CryptoFfiTestFixtures.java  CryptoFfiTestSupport.java  OpenBaoClient.java  OpenBaoIntegrationTest.java
python/: crypto_ffi.py  fixtures.py
python/examples/: basic_usage.py
python/tests/: test_crypto_ffi.py
