[workspace]
members = [
    "crates/crypto-core",
    "crates/crypto-adapters",
    "crates/app-support",
    "crates/crypto-ffi",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
description = "Capstone Rust security module workspace."

[patch.crates-io]
oqs = { path = "vendor/oqs" }
oqs-sys = { path = "vendor/oqs-sys" }

